# Sorting-Benchmarks

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  coverage.yml  rust.yml  tests.yml
results/: arm11.txt  armv7.txt  i7_10th_gen.txt  i7_4th_gen.txt
src/: algos.rs  build.rs  lib.rs  main.rs  sort.rs  statistics.rs  swap_unsafe.rs  unchecked_tools.rs  utils.rs
src/algos/: bubblesort.rs  cocktail_shaker.rs  heapsort.rs  insertionsort.rs  introsort.rs  mergesort.rs  misc.rs  mod.rs  quicksort.rs  radixsort.rs  rustsort.rs  selectionsort.rs  shellsort.rs  timsort.rs
src/calgos/: insertionsort.c  insertionsort.cpp  stdsort.cpp
src/exp_algos/: mod.rs
src/odd_algos/: mod.rs
src/tests/: correctness.rs  mod.rs  statistics.rs  utils.rs
tests/: correctness.rs  statistics.rs  utils.rs
