[package]
name = "sorting-benchmarks"
version = "0.1.0"
authors = ["Robochu <oleg.aprelikov@gmail.com>", "Jeremy Rifkin <rifkin@purdue.edu>"]
edition = "2018"
repository = "https://github.com/jeremy-rifkin/Sorting-Benchmarks"
publish = false

[dependencies]
rand = {version = "0.8.0", features = ["small_rng"]}
regex = "0.2"
prettytable-rs = "0.8.0"
